models: VariantStats extends VariantStats class generated by Avro